# sportly

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/espn/: _global.md  australian_football.md  baseball.md  college_sports.md  cricket.md  field_hockey.md  football.md  golf.md  hockey.md  index.md  lacrosse.md  mma.md  racing.md  rugby.md  rugby_league.md  soccer.md  tennis.md  volleyball.md  water_polo.md
docs/fantasy/: README.md
docs/fotmob/: README.md
docs/mlb/: README.md
docs/nba/: README.md
docs/nfl/: README.md
docs/nhl/: README.md
docs/sofascore/: README.md
sportly/: __init__.py  cli.py  client.py  exceptions.py  models.py
sportly/espn/: __init__.py  _domains.py  _leagues.py  _parse.py  australian_football.py  baseball.py  basketball.py  cricket.py  field_hockey.py  football.py  golf.py  hockey.py  lacrosse.py  mma.py  racing.py  rugby.py  rugby_league.py  soccer.py  tennis.py  volleyball.py  water_polo.py
sportly/espn/endpoints/: __init__.py  advanced.py  athletes.py  news.py  schedule.py  standings.py  teams.py
sportly/fantasy/: __init__.py
sportly/fantasy/endpoints/: __init__.py  _client.py  league.py  meta.py  players.py
sportly/fotmob/: __init__.py
sportly/fotmob/endpoints/: __init__.py  _client.py  leagues.py  matches.py  players.py  teams.py
sportly/mlb/: __init__.py  _client.py
sportly/mlb/endpoints/: __init__.py  games.py  players.py  schedule.py  stats.py  teams.py
sportly/nba/: __init__.py  _client.py
sportly/nba/endpoints/: __init__.py  games.py  league.py  players.py  teams.py
sportly/nfl/: __init__.py
sportly/nfl/endpoints/: __init__.py  games.py  league.py  players.py  teams.py
sportly/nhl/: __init__.py  _client.py
sportly/nhl/endpoints/: __init__.py  games.py  schedule.py  teams.py
sportly/sofascore/: __init__.py
sportly/sofascore/endpoints/: __init__.py  _client.py  events.py  players.py  schedule.py  teams.py  tournaments.py
tests/: conftest.py  test_cli.py  test_client.py  test_endpoints.py  test_espn_basketball.py  test_fantasy.py  test_fotmob.py  test_mlb.py  test_nba.py  test_nfl.py  test_nhl.py  test_package.py  test_sofascore.py
