[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportly"
version = "1.1.1"
description = "Python SDK for multi-source sports data — ESPN (17 sports, 139+ leagues), NHL, MLB, NBA, NFL, FotMob, Sofascore & Fantasy"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Joseph Wilson", email = "jwilson@kloverdevs.ca"}
]
keywords = ["sports", "espn", "nhl", "nba", "mlb", "nfl", "fotmob", "sofascore", "fantasy", "sdk", "api", "client", "basketball", "football", "soccer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<9.0",
    "pydantic>=2.6,<3.0",
    "structlog>=24.0,<25.0",
]

[project.optional-dependencies]
sofascore = [
    "curl_cffi>=0.6,<1.0",
]
all = [
    "curl_cffi>=0.6,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.9,<2.0",
    "pre-commit>=3.6,<4.0",
    "ipython>=8.22,<9.0",
]

[project.scripts]
sportly = "sportly.cli:main"

[project.urls]
Homepage = "https://github.com/pseudo-r/sportly"
Repository = "https://github.com/pseudo-r/sportly"
Documentation = "https://github.com/pseudo-r/sportly#readme"
"Bug Tracker" = "https://github.com/pseudo-r/sportly/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sportly*"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "ARG001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG002", "B017"]

[tool.ruff.lint.isort]
known-first-party = ["sportly"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "-ra",
    "-q",
    "--cov=sportly",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests (require network)",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["sportly"]
omit = ["*/tests/*", "*/__pycache__/*", "sportly/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
